# MLX-RFSN-main-mlx-rfsn-fusion-alpha-8-3-3

./: .gitignore  AGENTS.md  AUDIT_RESPONSE.md  Dockerfile.fusion-bench  Dockerfile.healthcheck  Dockerfile.server  MANIFEST.in  PERFORMANCE_ROADMAP.md  README.md  RELEASE_MANIFEST.md  REPAIR_COMPLETION_SUMMARY.md  REPAIR_PROGRESS.md  STRUCTURE.md  TICKETS.md  VALIDATION_PLAN.md  docker-compose.fusion-bench.yml  docker-compose.server.yml  pyproject.toml  release.toml  requirements-apple-silicon.txt
.devin/: config.local.json
.github/workflows/: ci.yml  fusion-alpha.yml  isolated-build.yml  production-validation.yml
artifacts/fixtures/: token_fixtures.jsonl
artifacts/winner/: integration_notes.md  winner.json  winner.md
benchmarks/: baseline_mlx.py  benchmark_end_to_end.py  benchmark_experimental_throughput.py  benchmark_generation_throughput.py  benchmark_kv_cache.py  benchmark_profiling.py  benchmark_real_generation_throughput.py  cache_memory_analyzer.py  candidate_registry.py  debug_decode_update_path.py  judge.py  kv_shootout.py  memory_shootout.py  per_layer_sensitivity.py  polar_kernel_bench.py  report_generator.py  run_a1.py  run_all.py  run_native_gate.py  schemas.py  validate_generation_quality.py  validate_generation_smoke.py  validate_packed_direct.py  validate_qjl_attention_score.py  validate_real_model_kv.py
benchmarks/candidates/: __init__.py  a1_wht_grouped_k8v4_gs64.py  a1b_wht_asym_k8v4.py  a2_wht_polar_4bit.py  a3_wht_turboquant_mse_4bit.py  a4_wht_turboquant_qjl_4bit.py  b1_sparsejl_grouped_k8v4_gs64.py  base_candidate.py  dense_baseline.py  r1_wht_grouped_residual128.py  r2_turboquant_mse_residual128.py  s1_snapkv_prune_only.py  s2_snapkv_plus_grouped.py  s3_snapkv_plus_turboquant_mse_residual128.py
benchmarks/reports/: a1_20260610T001650Z.md  a1_20260610T002514Z.md  a1_latest.md  baseline_mlx_20260610T001637Z.md  baseline_mlx_latest.md
benchmarks/results/: a1_20260610T001650Z.json  a1_20260610T002514Z.json  baseline_mlx_20260610T001637Z.json  baseline_mlx_20260610T002513Z.json  release_gate_latest.json
benchmarks/tests/: __init__.py  test_a1_attention_fidelity.py  test_a1_generation.py  test_a1_reconstruction.py
docs/: BENCHMARKING.md  CANDIDATE_PROMOTION.md  FEATURE_FLAGS.md  FULL_SYSTEM_ARCHITECTURE.md  INSTALL_MAC_MLX.md  IPHONE_LAN_MODE.md  MLX_LM_BASELINE.md  PLATFORM_SUPPORT.md  PRODUCT_BOUNDARY.md  README_REALITY.md  RELEASE_GATE.md  RUN_SERVER.md  TROUBLESHOOTING.md  architecture.md  benchmark_methodology.md  candidate_matrix.md  dev_setup.md  kivi_reference.md  limitations.md  rfsn_v10_baseline.md  roadmap_alpha9.md  status.md
docs/baseline/: README.md
docs/benchmark/: README.md
docs/candidates/: README.md
docs/history/: alpha7_gate_results.md
docs/integrations/: README.md
memory/: __init__.py  chunking.py  embeddings.py  qdrant_memory.py  turbovec_memory.py
repair/incremental-kv-runtime/: SCOPE_FREEZE.md
research/: README.md
rfsn_v10/: __init__.py  __main__.py  _version_source.py  clickhouse_client.py  compat.py  config.py  default_runtime.yaml  errors.py  kernels.py  kv_manager.py  metrics.py  model_loader.py
rfsn_v10/benchmarks/: packed_attention_bench.py
rfsn_v10/cache/: __init__.py  cartesian_codec.py  contracts.py  incremental_layer_cache.py  memory.py  mlx_packed_attention_reference.py  numpy_attention_oracle.py  numpy_codec_oracle.py  numpy_oracle.py  paged_arena.py  reference_attention.py  session.py
rfsn_v10/integrations/: __init__.py
rfsn_v10/kernels/: __init__.py  _cuda_backend.py  _metal_backend.py  cartesian_cpu_reference.py  metal_cartesian.py
rfsn_v10/quantization/: block_unpack.py  grouped_cartesian.py  polar_quant.py  turbo_polar_kv_manager.py  turbo_polar_quant.py
rfsn_v10/runtime/: __init__.py  engine.py  generation.py
rfsn_v10/server/: __main__.py  app.py  cli.py
rfsn_v11/: REPAIR_NOTES.md  __init__.py  adaptive_sparsity.py  alembic.ini  compat.py  config.py  db.py  errors.py  memory_guard.py  model_loader.py  telemetry.py
rfsn_v11/alembic/: README  env.py
rfsn_v11/attention/: __init__.py  sparse_dispatch.py
rfsn_v11/cache/: __init__.py  cache_key.py  cache_record_validator.py  paged_allocator.py  paged_cache.py  prefix_cache.py  (+3 more)
scripts/: archive_artifacts.py  build_isolated.sh  check_python_version.py  check_release_integrity.py  clean_artifacts.py  create_release_bundle.py  generate_proof_bundle.py  make_release_zip.py  mlx_gate.sh  release_gate.py  release_gate.sh  run_proof_regression_gate.sh  sync_version.py  test_clean_wheel_install.py  verify_definition_of_done.py
tests/: conftest.py  test_alembic_migrations.py  test_async_writer_retry.py  test_attention_causal_mask.py  test_canonical_kv.py  test_clickhouse_security.py  test_config.py  test_config_strict.py  test_decode_update_trace_artifact.py  test_experimental_flags.py  test_generation.py  test_kv_flag_compat.py  test_lan_guard.py  test_long_context.py  test_memory_guard_runtime_mlx.py  test_native_gate_manifest.py  test_no_placeholder_source.py  test_no_v11_import_from_v10.py  test_prefill_decode_split.py  test_runtime.py  test_runtime_import_contract.py  test_server_backend_errors.py  test_short_prompt_decode_drift.py  test_sparse_safety_gate.py  test_stress_32k.py  test_teacher_forced_step_trace_artifact.py  test_telemetry_e2e.py
(+233 files in other folders)
